# wordle

./: .gitattributes  .gitignore  LICENSE  Makefile  Makefile.am  Makefile.in  build.sh  config.h.in  configure  configure.ac  mkwords.c  run.sh  wordle.c  words.txt
.github/workflows/: build.yml
